# nonebot_plugin_bard_bot

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_bard_bot/: __init__.py
