[project]
name = "nonebot-plugin-bard-bot"
version = "0.1.0"
description = "nonebot-plugin-bard-bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_gocqhttp"]
plugin_dirs = ["nonebot_plugin_bard_bot"]
builtin_plugins = ["echo"]
